# BMPCompressor

./: CMakeLists.txt  README.md  main.cpp
CompressorLib/: CMakeLists.txt  Compressor.cpp  Compressor.h
FilesListModule/: Button.qml  CMakeLists.txt  FileDataStruct.h  FilesExplorer.cpp  FilesExplorer.h  FilesList.cpp  FilesList.h  FilesListView.qml  FilesListViewDelegate.qml
qml/: main.qml
